--- a/week2.ipynb
+++ b/week2.ipynb
@@ -10,7 +10,7 @@
     "Today, we'll focus on the basics of coding in R and familiarizing ourselves with the Jupyter notebook environment.\n",
     "\n",
     "As a note, much of this content is pulled from the [D-Lab](https://dlab.berkeley.edu/)'s R Bootcamp content  \n",
-    "Credit: Ian Castro"
+    "Credit: Adapted from Ian Castro"
    ]
   },
   {
