--- a/week2.ipynb
+++ b/week2.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "## Coding in R\n",
     "\n",
-    "Now that we've gotten that out of the way, let's go learn how to code in R!\n",
+    "Now that we've gotten that out of the way, let's go learn how to code in R!\n"
     ]
   },
   {
