--- a/week2.ipynb
+++ b/week2.ipynb
@@ -126,6 +126,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Arithmetic in R\n",
+    "\n",
     "As a calculator, R works great. Notice that we can do most of the mathematical operations we expect, like addition, subtraction, multiplication, and division."
    ]
   },
