--- a/week3.ipynb
+++ b/week3.ipynb
@@ -240,6 +240,46 @@
    "outputs": [],
    "source": []
   }
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correlation v.s. Causality\n",
+    "\n",
+    "It's very important to distinguish between correlation and causality. Correlation means that two variables are linearly related without making a statement about cause and effect. By contrast, causality describes a relationship where one event or process causes an effect on the other event or process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes, “A correlates with B” ≠ “A causes B,” why?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This may be due to: 1. **Reverse causality** (the possibility that B actually causes A) and 2.\n",
+    "**Omitted variable bias** (a 3rd variable `C` causes both `A` and `B`. Note that `C` does not need to be a variable in the given dataset)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spurious correlation\n",
+    "\n",
+    "Definition: a mathematical relationship in which two or more events or variables are associated but not causally related, due to coincidence, or the presence of a certain third, unseen factor (i.e., **confounding factor**), or it can just happen without any confounding variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see some online examples here: [https://www.tylervigen.com/spurious-correlations](https://www.tylervigen.com/spurious-correlations). "
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
