--- a/week4.ipynb
+++ b/week4.ipynb
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "# Run this cell to read in the data.\n",
-    "anchor <- read.csv(\"../data/anchoring_data_FA20.csv\")\n",
+    "anchor <- read.csv(\"data/anchoring_data_FA20.csv\")\n",
     "head(anchor)"
    ]
   },
