--- a/week4.ipynb
+++ b/week4.ipynb
@@ -206,9 +206,9 @@
     "high_focus <- subset(focus_anchor, cond == 1)\n",
     "low_focus <- subset(focus_anchor, cond == 0)\n",
     "\n",
-    "mean(high_focus$cat) # What does this number mean? What dodes it tell us about the potential outcome?\n",
+    "mean(high_focus$cat) # What does this number mean? \n",
     "mean(low_focus$cat) # and this one?\n",
-    "mean(low_focus$cat) - mean(high_focus$cat) # How about this? \n",
+    "mean(low_focus$cat) - mean(high_focus$cat) # How about this? What does it tell us about the potential outcome?\n",
     "\n",
     "# What condition is needed to make this step accurate?"
    ]
