--- a/week4.ipynb
+++ b/week4.ipynb
@@ -50,9 +50,9 @@
     "\n",
     "What is the output of `TRUE | TRUE & FALSE`?\n",
     "\n",
-    "What is the output of `0 + FALSE + TRUE`?\n",
+    "What is the output of `1 & FALSE & TRUE`?\n",
     "\n",
-    "What is the output of `1 & FALSE & TRUE`?"
+    "What is the output of `0 + FALSE + TRUE`?"
    ]
   },
   {
