--- a/week5.ipynb
+++ b/week5.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "Use the `difference_in_means` function to figure out the the difference in means for (MT2-MT1) for tutored versus non-tutored students.\n",
     "\n",
-    "Stuck? Use the R Cheat Sheet: https://bcourses.berkeley.edu/courses/1505753/pages/r-cheat-sheet "
+    "Stuck? Use the R Cheat Sheet: https://bcourses.berkeley.edu/courses/1520983/pages/r-cheat-sheet?module_item_id=16734214 "
    ]
   },
   {
