--- a/week5.ipynb
+++ b/week5.ipynb
@@ -132,7 +132,7 @@
     "-------\n",
     "Now that we have that information, we can make the following hypothesis:\n",
     "\n",
-    "\"If a student receives tutoring, then they will do better on Midterm 2 versus their score on Midterm 1, compared to students who did not receive tutoring.\"\n",
+    "\"If a student receives tutoring, then their change in score from Midterm 1 to Midterm 2 will be better compared to students who did not receive tutoring.\"\n",
     "\n",
     "Let's dive a little bit deeper. Our statistic is:\n",
     "\n",
