--- a/week6.ipynb
+++ b/week6.ipynb
@@ -172,9 +172,9 @@
    "outputs": [],
    "source": [
     "s1 <- sd(our_sample[!our_sample$Mentored,]$Final) #standard dev for not tutored\n",
-    "s2 <- sd(our_sample[!our_sample$Mentored,]$Final) #standard dev for tutored\n",
+    "s2 <- sd(our_sample[our_sample$Mentored,]$Final) #standard dev for tutored\n",
     "n1 <- length(our_sample[!our_sample$Mentored,]$Final) # sample size of not tutored\n",
-    "n2 <- length(our_sample[!our_sample$Mentored,]$Final) #sample size of tutored\n",
+    "n2 <- length(our_sample[our_sample$Mentored,]$Final) #sample size of tutored\n",
     "\n",
     "std_error <- ... #mathematically calculate\n",
     "std_error"
