--- a/week6.ipynb
+++ b/week6.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, imagine that I am only able to get data for 50 students. I randomly sampled 50 students and asked them for the difference in their final scores. (We are treating the entire dataset/class as the population, and the 50 students as the sample. "
+    "Now, imagine that I am only able to get data for 50 students. I randomly sampled 50 students and asked them for their final scores. (We are treating the entire dataset/class as the population, and the 50 students as the sample. "
    ]
   },
   {
