--- a/week10.ipynb
+++ b/week10.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Weighted meam of support for repealing ACA:\n",
+    "### Weighted mean of support for repealing ACA:\n",
     "\n",
     "..."
    ]
@@ -68,7 +68,7 @@
    "source": [
     "#### Evaluate the following claim:\n",
     "\n",
-    "\"Weighting eliminates sampling biases.\""
+    "\"Weighting eliminates biases.\""
    ]
   },
   {
