--- a/week11.ipynb
+++ b/week11.ipynb
@@ -182,7 +182,7 @@
    "id": "2c16ef6a",
    "metadata": {},
    "source": [
-    "#### Now, provide an interpretation of the estimate for the `Height` term."
+    "#### Now, How would you interpret the estimate for the `Height` term? What about the estimate next to `Waist`? And the estimate for `Intercept`?"
    ]
   },
   {
@@ -199,6 +199,14 @@
    "metadata": {},
    "source": [
     "Notice how our R-squared for our new model has increased to about to about 0.88, meaning that more of the variation in the data is now explained by our model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4fe75a3",
+   "metadata": {},
+   "source": [
+    "What would the estimated weight of people who are 60 inches tall and have a waist circumference of 26 inches."
    ]
   },
   {
