--- a/week11.ipynb
+++ b/week11.ipynb
@@ -166,7 +166,7 @@
    "id": "4180983d",
    "metadata": {},
    "source": [
-    "#### What would our equation to estimate `Weight` be with the additional variable?  "
+    "#### What would our equation to estimate `Weight` be with the additional variable in our model?  "
    ]
   },
   {
@@ -215,7 +215,10 @@
    "id": "df9aaeb4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##Height = 60, Waist = 26\n",
+    "predicted_weight <- ..."
+   ]
   }
  ],
  "metadata": {
