--- a/week11.ipynb
+++ b/week11.ipynb
@@ -217,7 +217,8 @@
    "outputs": [],
    "source": [
     "##Height = 60, Waist = 26\n",
-    "predicted_weight <- ..."
+    "predicted_weight <- ...\n",
+    "predicted_weight"
    ]
   }
  ],
